[tool.poetry]
name = "apolo-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
pyarrow = "^15.0.0"
pylint = "^3.0.3"
flake8 = "^7.0.0"
pytest = "^8.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
